--- a/Proyecto1/src/UIs/AñadirUsuario.form
+++ b/Proyecto1/src/UIs/AñadirUsuario.form
@@ -48,5 +48,17 @@
         </Constraint>
       </Constraints>
     </Component>
+    <Component class="javax.swing.JLabel" name="FondoA&#xf1;adir">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/UIs/Fondo.jpeg"/>
+        </Property>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="0" y="0" width="740" height="420"/>
+        </Constraint>
+      </Constraints>
+    </Component>
   </SubComponents>
 </Form>
