--- a/Proyecto1/src/UIs/EliminarUsuario.form
+++ b/Proyecto1/src/UIs/EliminarUsuario.form
@@ -38,6 +38,9 @@
     </Container>
     <Component class="javax.swing.JLabel" name="TituloEliminar">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="48" style="1"/>
         </Property>
@@ -45,7 +48,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="80" y="20" width="-1" height="-1"/>
+          <AbsoluteConstraints x="90" y="80" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -55,7 +58,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="123" y="132" width="430" height="60"/>
+          <AbsoluteConstraints x="120" y="180" width="430" height="60"/>
         </Constraint>
       </Constraints>
     </Component>
